<resources>
    <string name="app_name">Hangout</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="create_new_account_button_text">Create New Account</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="password_edit_text_hint">Password</string>
    <string name="email_address_edit_text_hint">Email Address</string>
    <string name="create_new_profile_title">Create New Profile</string>
    <string name="name_title">Name</string>
    <string name="first_name_title">First Name</string>
    <string name="last_name_title">Last Name</string>
    <string name="email_address_title">Email Address</string>
    <string name="password_title">Password</string>
    <string name="confirm_password_title">Confirm Password</string>
    <string name="cancel_string">Cancel</string>
    <string name="next_string">Next</string>
    <string name="sunday_text_view_initial_create_schedule">Sunday:</string>
    <string name="monday_text_view_initial_create_schedule">\nMonday:</string>
    <string name="tuesday_text_view_initial_create_schedule">\nTuesday:</string>
    <string name="wednesday_text_view_initial_create_schedule">\nWednesday:</string>
    <string name="thursday_text_view_initial_create_schedule">\nThursday:</string>
    <string name="friday_text_view_initial_create_schedule">\nFriday:</string>
    <string name="saturday_text_view_initial_create_schedule">\nSaturday:</string>
    <string name="add_button_text_create_schedule">ADD</string>
    <string name="start_time_button_text_create_schedule">Start Time</string>
    <string name="stop_time_button_text_create_schedule">Stop Time</string>

    <string-array name="days_of_week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
</resources>
