<LinearLayout
    android:background="#ff838383"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <View
        android:layout_width="0dp"
        android:layout_height="60dp"/>

    <TextView
        android:layout_gravity="center_horizontal"
        android:id="@+id/app_title_sign_in"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/app_name"
        android:textColor="#ff52b805"
        android:textSize="80sp"/>

    <View
        android:layout_width="0dp"
        android:layout_height="60dp"/>

    <EditText
        android:background="#ffffffff"
        android:hint="@string/email_address_edit_text_hint"
        android:id="@+id/email_edit_text_sign_in"
        android:inputType="textEmailAddress"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="250dp"/>

    <View
        android:layout_width="0dp"
        android:layout_height="10dp"/>

    <EditText
        android:background="#ffffffff"
        android:hint="@string/password_edit_text_hint"
        android:id="@+id/password_edit_text_sign_in"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="250dp"/>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:onClick="signInAttempt"
        android:text="@string/sign_in_button_text"/>

    <Button
        android:id="@+id/create_new_account_button"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:onClick="createNewAccount"
        android:text="@string/create_new_account_button_text"/>

</LinearLayout>
